[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["crates/node-litesvm/tests/clock-example"]

[workspace.package]
version = "0.8.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/LiteSVM/litesvm"
rust-version = "1.86.0"

[workspace.dependencies]
# Local agave fork dependencies
agave-feature-set = { path = "../agave/feature-set" }
agave-precompiles = { path = "../agave/precompiles" }
agave-reserved-account-keys = { path = "../agave/reserved-account-keys" }
agave-syscalls = { path = "../agave/syscalls" }
ansi_term = "0.12"
bincode = "1.3"
bv = "0.11.1"
criterion = "0.7"
ed25519-dalek = "1.0.1"
hashbrown = "0.16.0"
indexmap = "2.12"
itertools = "0.14"
libsecp256k1 = "0.7.2"
litesvm = { path = "crates/litesvm", version = "0.8" }
log = "0.4"
napi = { version = "3.5.2", default-features = false }
napi-build = "2.3.1"
napi-derive = "3.3.3"
qualifier_attr = "0.2.2"
serde = "1.0"
serde_json = "1.0"
smallvec = "1.13"
solana-account = "~3.2"
solana-address-lookup-table-interface = "~3.0"
solana-bpf-loader-program = { path = "../agave/programs/bpf_loader" }
solana-builtins = { path = "../agave/builtins" }
solana-clock = "~3.0"
solana-compute-budget = { path = "../agave/compute-budget" }
solana-compute-budget-instruction = { path = "../agave/compute-budget-instruction" }
solana-compute-budget-interface = "~3.0"
solana-config-interface = "2.0.0"
solana-ed25519-program = "~3.0"
solana-epoch-rewards = "~3.0"
solana-epoch-schedule = "~3.0"
solana-fee = { path = "../agave/fee" }
solana-fee-structure = "~3.0"
solana-hash = "~3.1"
solana-instruction = "~3.1"
solana-instructions-sysvar = "~3.0"
solana-keypair = "~3.1"
solana-last-restart-slot = "~3.0"
solana-loader-v3-interface = "6.1"
solana-loader-v4-interface = "3.0"
solana-message = "~3.0"
solana-native-token = "~3.0"
solana-nonce = "~3.0"
solana-nonce-account = "~3.0"
solana-precompile-error = "~3.0"
solana-program-error = "~3.0"
solana-program-option = "~3.0"
solana-program-pack = "~3.0"
solana-program-runtime = { path = "../agave/program-runtime" }
solana-pubkey = "~3.0"
solana-rent = "~3.0"
solana-sbpf = { git = "https://github.com/TraceSVM/sbpf.git" }
solana-sdk-ids = "~3.1"
solana-secp256k1-program = "~3.0"
solana-sha256-hasher = "~3.1"
solana-signature = "~3.1"
solana-signer = "~3.0"
solana-slot-hashes = "~3.0"
solana-slot-history = "~3.0"
solana-stake-interface = "2.0.1"
solana-svm-callback = { path = "../agave/svm-callback" }
solana-svm-log-collector = { path = "../agave/svm-log-collector" }
solana-svm-timings = { path = "../agave/svm-timings" }
solana-svm-transaction = { path = "../agave/svm-transaction" }
solana-system-interface = "2.0"
solana-system-program = { path = "../agave/programs/system" }
solana-sysvar = "~3.1"
solana-sysvar-id = "~3.1"
solana-transaction = "~3.0"
solana-transaction-context = { path = "../agave/transaction-context" }
solana-transaction-error = "~3.0"
solana-vote-interface = "4.0"
spl-associated-token-account-interface = "2.0"
spl-token-interface = "2.0"
spl-token-2022-interface = "2.0"
test-log = "0.2"
thiserror = "2.0"

[profile.bench]
debug = true

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.lints.clippy]
result_large_err = "allow"
